Update translations and integrate language keys for dynamic message handling
- Added new translation keys in `en_US` and `de_DE` locales.
- Adjusted `Language` class to support formatted messages with arguments.
- Updated `AutoVoice` and `EventManager` to use language keys for user-facing messages.

--- a/src/main/resources/translation_de_DE.properties
+++ b/src/main/resources/translation_de_DE.properties
@@ -1,1 +1,3 @@
-autoVoice.alsoPlaying = auch
+autoVoice.defaultChannelName = Unbekannte Aktivität
+autoVoice.offlineVoiceJoinDenied = Du musst ONLINE sein, um Channels auf diesem Server beizutreten! (Server: %s)
+eventManager.serverOnlyExecution = Du musst den Befehl auf einem Server ausführen!
