--- a/src/main/resources/translation_en_US.properties
+++ b/src/main/resources/translation_en_US.properties
@@ -1,1 +1,3 @@
-autoVoice.alsoPlaying = also
+autoVoice.defaultChannelName = Unknown Activity
+autoVoice.offlineVoiceJoinDenied = You need to be ONLINE to join channels on this server! (Server: %s)
+eventManager.serverOnlyExecution = You need to execute the command on a server!
